<resources>
    <string name="app_name">AssociateCertification</string>

    <!-- Fragments names -->
    <string name="fragment_themes">Theme selection</string>
    <string name="fragment_toasts">Toasts messages</string>
    <string name="fragment_snackbars">Snackbar messages</string>
    <string name="fragment_pdf_reader_library">PDF reader</string>
    <string name="fragment_pdf_reader">Document</string>

    <!-- Content main -->
    <string name="go_to_themes">Go to themes section</string>
    <string name="go_to_toasts">Go to toasts section</string>
    <string name="go_to_snackbars">Go to snackbars section</string>
    <string name="go_to_pdf_reader">Go to PDF reader</string>


    <!-- Theme chooser -->
    <string name="settings_text_select_theme">Select Theme:</string>
    <string name="settings_text_credentials">Credentials</string>
    <string name="settings_text_username_hint">username</string>
    <string name="settings_text_password_hint">password</string>
    <string name="settings_text_sync_automatically">Sync automatically</string>
    <string name="settings_text_location">Location</string>
    <string name="settings_text_state_on">On</string>
    <string name="settings_text_state_off">Off</string>
    <string name="settings_text_clear_data">Clear Data</string>
    <string-array name="theme_array">
        <item>Default app theme</item>
        <item>Custom Holo Light</item>
    </string-array>

    <!-- Toasts -->
    <string name="show_simple_toast">Show simple toast</string>
    <string name="show_custom_toast">Show custom toast</string>
    <string name="single_toast_message">Hello from toasts view!</string>

    <!-- Snackbars -->
    <string name="show_simple_snackbar">Show simple snackbar</string>
    <string name="show_custom_snackbar">Show custom snackbar</string>
    <string name="simple_snackbar_message">Hello Snackbar</string>
    <string name="hint_custom_snackbar">Type a message</string>
    <string name="empty_snackbar_message">The custom message must not be empty</string>

    <!-- PDF Reader -->
    <string name="menu_library">Library</string>
    <string name="menu_reader">Reader</string>

    <string name="bookmark">Bookmark</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="page_navigation_format">Page: %1$d / %2$d</string>
    <string name="page_bookmark_format">Page %1$d</string>
    <string name="bookmarks">Bookmarks</string>

</resources>