<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dp_dim_16">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go_to_themes"
        style="?attr/actionButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_themes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go_to_toasts"
        style="?attr/actionButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_toasts" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go_to_snackbars"
        style="?attr/actionButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_snackbars" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go_to_pdf_reader"
        style="?attr/actionButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_pdf_reader" />

</LinearLayout>