<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/fragment_main_content">

    <fragment
        android:id="@+id/fragment_main_content"
        android:name="com.omnicluster.associatecertification.ContentMainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_content_main">
        <action
            android:id="@+id/action_fragment_main_content_to_fragment_toasts"
            app:destination="@id/fragment_toasts" />
        <action
            android:id="@+id/action_fragment_main_content_to_fragment_theme_chooser"
            app:destination="@id/fragment_theme_chooser" />
        <action
            android:id="@+id/action_fragment_main_content_to_fragment_snackbars"
            app:destination="@id/fragment_snackbars" />
        <action
            android:id="@+id/action_fragment_main_content_to_libraryFragment"
            app:destination="@id/libraryFragment" />
    </fragment>

    <fragment
        android:id="@+id/fragment_toasts"
        android:name="com.omnicluster.associatecertification.androidcore.ToastsFragment"
        android:label="@string/fragment_toasts"
        tools:layout="@layout/fragment_toasts" />

    <fragment
        android:id="@+id/fragment_theme_chooser"
        android:name="com.omnicluster.associatecertification.themes.ThemeChooserFragment"
        android:label="@string/fragment_themes"
        tools:layout="@layout/fragment_theme_chooser" />

    <fragment
        android:id="@+id/fragment_snackbars"
        android:name="com.omnicluster.associatecertification.androidcore.SnackBarsFragment"
        android:label="@string/fragment_snackbars"
        tools:layout="@layout/fragment_snackbars" />
    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.omnicluster.associatecertification.pdfreader.presentation.library.LibraryFragment"
        android:label="@string/fragment_pdf_reader_library"
        tools:layout="@layout/fragment_library">
        <action
            android:id="@+id/action_libraryFragment_to_readerFragment"
            app:destination="@id/readerFragment" />
    </fragment>
    <fragment
        android:id="@+id/readerFragment"
        android:name="com.omnicluster.associatecertification.pdfreader.presentation.reader.ReaderFragment"
        android:label="@string/fragment_pdf_reader"
        tools:layout="@layout/fragment_reader" />

</navigation>