<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/defaultPrimaryBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_dim_16"
    tools:ignore="Hint, Autofill">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSelectTheme"
        style="?attr/textLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_text_select_theme"
        app:layout_constraintBottom_toBottomOf="@+id/spThemes"
        app:layout_constraintEnd_toStartOf="@+id/spThemes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spThemes" />

    <Spinner
        android:id="@+id/spThemes"
        style="?attr/spinner"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_dim_64"
        android:entries="@array/theme_array"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCredentials"
        style="?attr/textSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_text_credentials"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spThemes" />

    <EditText
        android:id="@+id/tvUsername"
        style="?attr/textRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_dim_16"
        android:hint="@string/settings_text_username_hint"
        android:inputType="text"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCredentials" />

    <EditText
        android:id="@+id/tvpassword"
        style="?attr/textRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_text_password_hint"
        android:inputType="textPassword"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSync"
        style="?attr/textRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_text_sync_automatically"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_sync_automatically"
        app:layout_constraintEnd_toStartOf="@+id/checkbox_sync_automatically"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkbox_sync_automatically" />

    <CheckBox
        android:id="@+id/checkbox_sync_automatically"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_dim_32"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvpassword"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/tvLocation"
        style="?attr/textRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_text_location"
        app:layout_constraintBottom_toBottomOf="@+id/toggle_google"
        app:layout_constraintEnd_toStartOf="@+id/toggle_google"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toggle_google" />

    <Switch
        android:id="@+id/toggle_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_dim_32"
        android:textOff="@string/settings_text_state_off"
        android:textOn="@string/settings_text_state_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_sync_automatically"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnClearData"
        style="?attr/customButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_text_clear_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>