<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/iv_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="88dp"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="88dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_pages"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                tools:text="Page: 1 / 12"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@color/colorPrimaryDark"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:drawableEnd="@drawable/ic_arrow_up"
                android:text="@string/bookmarks"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tab_bookmark"
                style="?attr/tabSeparator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_bookmark"
                android:icon="@drawable/ic_bookmark"
                android:text="@string/bookmark" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tab_library"
                style="?attr/tabSeparator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_library"
                android:text="@string/menu_library"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tab_previous_page"
                style="?attr/tabSeparator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_previous_page"
                android:text="@string/previous" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tab_next_page"
                style="?attr/tabSeparator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_next_page"
                android:text="@string/next"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_bookmarks"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/item_bookmark"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>